<resources>

    <string name="app_name">Alarmy</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Alarmy</string>
    <string name="new_alarm">Add alarm</string>
    <string name="next_alarm">Next Alarm:</string>
    <string name="title_activity_add_alarm">New alarm</string>

    <string-array name="time_options_array">
        <item>Alarm at</item>
        <item>Alarm in</item>
    </string-array>

    <string name="button_add">Add alarm</string>
    <string name="tomorrow">tomorrow</string>
    <string name="today">today</string>
    <string name="h0">H0</string>
    <string name="h1">H1</string>
    <string name="m0">M0</string>
    <string name="m1">M1</string>
    <string name="title_activity_list_alarms">Alarms</string>
    <string name="snooze">Snooze</string>
    <string name="snoozeInterval"><u>Snooze interval</u></string>
    <string name="dismiss_alarm">Dismiss alarm</string>
    <string name="vibration"><u>Vibration</u></string>
    <string name="sound"><u>Sound</u></string>
    <string name="games"><u>Challenge before dismiss</u></string>
    <string name="repeatOnDays"><u>Repeat on days</u></string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="pick_songs">Select alarmsound&#8230;</string>
    <string name="volume">Volume</string>
    
    <string name="list_divider">List divider</string>
    
    <string name="colon">:</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    
    <string name="contextMenuDelete">Delete</string>
    <string name="contextMenuEdit">Edit</string>
</resources>