<?xml version="1.0" encoding="utf-8"?>
<!--
 * Copyright (C) 2012 Emil Edholm, Emil Johansson, Johan Andersson, Johan Gustafsson
 * 
 * This file is part of dat255-bearded-octo-lama
 *
 *  dat255-bearded-octo-lama is free software: you can redistribute it and/or modify
 *  it under the terms of the GNU General Public License as published by
 *  the Free Software Foundation, either version 3 of the License, or
 *  (at your option) any later version.
 *
 *  dat255-bearded-octo-lama is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *  GNU General Public License for more details.
 *
 *  You should have received a copy of the GNU General Public License
 *  along with dat255-bearded-octo-lama.  If not, see <http://www.gnu.org/licenses/>.
-->
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tabhost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center" />

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <LinearLayout
                android:id="@+id/tab1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:orientation="vertical" >

                <Spinner
                    android:id="@+id/time_options_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="25dp"
                    android:entries="@array/time_options_array" />

                <LinearLayout
                    android:id="@+id/timeSelector"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/h0"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_weight="1"
                        android:background="@color/green"
                        android:onClick="onTimeClick"
                        android:tag="@string/h0"
                        android:text="0" />

                    <Button
                        android:id="@+id/h1"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:onClick="onTimeClick"
                        android:tag="@string/h1"
                        android:text="0" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text=":"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <Button
                        android:id="@+id/m0"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:onClick="onTimeClick"
                        android:tag="@string/m0"
                        android:text="0" />

                    <Button
                        android:id="@+id/m1"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:onClick="onTimeClick"
                        android:tag="@string/m1"
                        android:text="0" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:orientation="horizontal" >

                        <Button
                            android:id="@+id/button1"
                            style="?android:attr/buttonStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:onClick="onNumpadClick"
                            android:text="1" />

                        <Button
                            android:id="@+id/button2"
                            style="?android:attr/buttonStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:onClick="onNumpadClick"
                            android:text="2" />

                        <Button
                            android:id="@+id/button3"
                            style="?android:attr/buttonStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:onClick="onNumpadClick"
                            android:text="3" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:orientation="horizontal" >

                        <Button
                            android:id="@+id/button4"
                            style="?android:attr/buttonStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:onClick="onNumpadClick"
                            android:text="4" />

                        <Button
                            android:id="@+id/button5"
                            style="?android:attr/buttonStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left|bottom"
                            android:layout_weight="1"
                            android:onClick="onNumpadClick"
                            android:text="5" />

                        <Button
                            android:id="@+id/button6"
                            style="?android:attr/buttonStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left|bottom"
                            android:onClick="onNumpadClick"
                            android:text="6" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:orientation="horizontal" >

                        <Button
                            android:id="@+id/button7"
                            style="?android:attr/buttonStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:onClick="onNumpadClick"
                            android:text="7" />

                        <Button
                            android:id="@+id/button8"
                            style="?android:attr/buttonStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:onClick="onNumpadClick"
                            android:text="8" />

                        <Button
                            android:id="@+id/button9"
                            style="?android:attr/buttonStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:onClick="onNumpadClick"
                            android:text="9" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:orientation="horizontal" >

                        <Button
                            android:id="@+id/button0"
                            style="?android:attr/buttonStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:onClick="onNumpadClick"
                            android:text="0" />
                    </LinearLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/buttonAddTest"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="addTestAlarm"
                    android:text="Add test alarm (in 5 sec)" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tab2"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="left"
                android:orientation="vertical" >

                <CheckBox
                    android:id="@+id/sound"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:gravity="left"
                    android:text="@string/sound" />

                <Spinner
                    android:id="@+id/sound_list_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginTop="15dp" />
                
                <Spinner
                    android:id="@+id/snooze_list_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginTop="15dp" />
                
                
                <CheckBox
                    android:id="@+id/vibration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:gravity="left"
                    android:text="@string/vibration" />

                <CheckBox
                    android:id="@+id/games"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/games"                    
                    android:gravity="left" />

                <Spinner
                    android:id="@+id/games_list_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginTop="15dp" />
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

</TabHost>